services/openfaas/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-external
  namespace: openfaas
  labels:
    traffic-type: internal
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefix
spec:
  rules:
  - host: openfaas.internal.hugocortes.me
    http:
      paths:
      - backend:
          serviceName: gateway-external
          servicePort: 8080
